# docs

./: .gitignore  Build.Dockerfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Nginx.Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  serve.bat  setup.bat
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 10-missing-documentation.yml  20-wrong-or-outdated-information.yml  30-typo-or-grammar.yml
.github/workflows/: ci-build.yml
_variables/: abi.json  cck.json  chilloutvr.json
docs/: .pages
docs/ABI/: index.md
docs/ABI/legal/: privacy-policy.md  tos.md
docs/CCK/: .pages  faq.md  index.md  setup.md
docs/CCK/avatar/: index.md  whitelisted-components.md
docs/CCK/components/: aas-trigger.md  animator-driver.md  asset-info.md  attachment.md  avatar.md  blitter.md  face-tracking.md  haptic-chest-area.md  haptic-zone.md  interactable.md  material-driver.md  material-updater.md  nav-controller.md  pickup-object.md  world.md
docs/CCK/faq/: index.md
docs/CCK/general/: get-started.md
docs/CCK/setup/: index.md
docs/CCK/spawnable/: index.md
docs/CCK/world/: index.md
docs/ChilloutVR/: .pages  index.md
docs/ChilloutVR/controls/: index.md  valve-index.md
docs/ChilloutVR/faq/: index.md
docs/ChilloutVR/general/: index.md
docs/ChilloutVR/quick-start/: index.de.md
docs/Official/: index.md
docs/Official/legal/: privacy-policy.md
docs/assets/javascripts/: extra.js
docs/assets/stylesheets/: extra.css
docs/cck/: .pages  content-tags.md  faq.md  index.md  setup.md  third-party-assets.md
docs/cck/avatar/: index.md  whitelisted-components.md
docs/chilloutvr/: index.md  quick-start.md
docs/get-started/: index.md
docs/official/: index.md
docs/old/: custom-render-texture-updater.md  particle-sound.md
extra_sass/: article.scss  style.css.scss
extra_sass/overrides/: footer.scss  header.scss
overrides/: 404.html  get-started.html  home.html
overrides/partials/: footer.html  header.html
(+200 files in other folders)
