[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Rob Nelson <nexisentertainment@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.1"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-redirects = "^1.2.2"
livereload = "^2.7.1"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-extra-sass-plugin = "^0.1.0"
mkdocs-static-i18n = "^1.3.0"
mkdocs-markdownextradata-plugin = "^0.2.5"
materialx = "^1.39.3"
mkdocs-material-extensions = "^1.3.1"
mkdocs-material = "^9.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
